# python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
tests/: offline_test.py
uaregistry/: __init__.py  client.py  commands.py  config.py  exceptions.py  frame.py  namespaces.py  response.py  result_code.py  transport.py
