[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uaregistry"
version = "1.0.0"
description = "Dependency-free Python client for the UARegistry EPP service (RFC 5730-5734 over TLS)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "UARegistry" }]
keywords = ["epp", "registry", "domains", "rfc5730", "uaregistry"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/uaregistry/python-sdk"
Repository = "https://github.com/uaregistry/python-sdk"
Issues = "https://github.com/uaregistry/python-sdk/issues"

[tool.setuptools]
packages = ["uaregistry"]
